syntax = "proto3";

option csharp_namespace = "GrpcDottyLogs";

import "google/protobuf/timestamp.proto";

package dottylogs;

// The greeting service definition.
service DottyLogs {
  // Starts a request span (or adds to existing one, if we know tracingIdentifier)
  rpc StartSpan (StartSpanRequest) returns (Empty);
  // Stops it
  rpc StopSpan (StopSpanRequest) returns (Empty);

  // Add log message to span
  rpc PushLogMessage (LogRequest) returns (Empty);

  // Streams heartbeats and metrics
  rpc MetricsUpdate (stream MetricsUpdateRequest) returns (Empty);
}

message Empty {}

message StartSpanRequest {
  string tracingIdentifier = 1;
  string spanIdentifier = 2;
  int32 threadId = 3;
  string requestUrl = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message StopSpanRequest {
  string tracingIdentifier = 1;
  string spanIdentifier = 2;
  bool wasSuccess = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message LogRequest {
	string spanIdentifier = 1;
	string message = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message MetricsUpdateRequest {
	float memory = 1;
	float cpu = 2;
}